<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="application_logo">Application logo</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use My Location</string>
    <string name="election_information"><u>Election Information</u></string>
    <string name="voting_locations"><u>Voting Locations</u></string>
    <string name="ballot_information"><u>Ballot Information</u></string>
    <string name="correspondence_address">Correspondence Address:</string>

    <string name="err_invalid_address">Please enter valid address</string>
    <string name="permission_denied_explanation">You need to grant location permission to auto-detect the address.</string>
    <string name="settings">Settings</string>
    <string name="Refresh" />
    <string name="data_not_available">Data not available</string>
    <string name="profile_image">Profile image</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>

</resources>
