<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/application_logo"
            app:srcCompat="@drawable/ballot_logo" />

        <Button
            android:id="@+id/upcoming_elections_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/upcoming_elections" />

        <Button
            android:id="@+id/find_representatives_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/find_my_representatives" />
    </LinearLayout>
</layout>