<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/profile_image"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/office_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{representative.office.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Text Line 1" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@+id/party_text"
            app:layout_constraintEnd_toStartOf="@+id/web_image"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/office_text"
            app:layout_constraintTop_toBottomOf="@+id/office_text"
            tools:text="Text Line 2" />

        <TextView
            android:id="@+id/party_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/web_image"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/name_text"
            app:layout_constraintTop_toBottomOf="@+id/name_text"
            tools:text="Text Line 3" />

        <ImageView
            android:id="@+id/twitter_image"
            twitter="@{representative.official}"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/twitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_text"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/facebook_image"
            facebook="@{representative.official}"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/facebook"
            app:layout_constraintEnd_toStartOf="@+id/twitter_image"
            app:layout_constraintTop_toTopOf="@+id/twitter_image"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/web_image"
            url="@{representative.official}"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/website"
            app:layout_constraintEnd_toStartOf="@+id/facebook_image"
            app:layout_constraintTop_toTopOf="@+id/facebook_image"
            app:srcCompat="@drawable/ic_www" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>