<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcoming_header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_elections_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HeaderText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_list"
            boolVisibility="@{!viewModel.isLoading &amp;&amp; !viewModel.isFailure}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdge="vertical"
            android:requiresFadingEdge="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/saved_elections_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_header_text">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/saved_elections_header"
            style="@style/HeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saved_elections"
            app:layout_constraintBottom_toTopOf="@+id/saved_elections_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_elections_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdge="vertical"
            android:requiresFadingEdge="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_elections_header"
            app:layout_constraintVertical_bias="0.0">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/elections_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            boolVisibility="@{viewModel.isLoading}"
            android:indeterminateOnly="true"
            app:layout_constraintBottom_toBottomOf="@+id/upcoming_elections_list"
            app:layout_constraintEnd_toEndOf="@+id/upcoming_elections_list"
            app:layout_constraintStart_toStartOf="@+id/upcoming_elections_list"
            app:layout_constraintTop_toTopOf="@+id/upcoming_elections_list" />

        <ImageView
            android:id="@+id/elections_failure_image"
            boolVisibility="@{viewModel.isFailure}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/data_not_available"
            app:layout_constraintBottom_toBottomOf="@+id/upcoming_elections_list"
            app:layout_constraintEnd_toEndOf="@+id/upcoming_elections_list"
            app:layout_constraintStart_toStartOf="@+id/upcoming_elections_list"
            app:layout_constraintTop_toTopOf="@+id/upcoming_elections_list"
            app:srcCompat="@drawable/ic_connection_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>